chore(ci): trigger redeploy (append deploy-trigger comment)

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -121,4 +121,4 @@ code {
   .sidebar .navbar-toggler {
     display: none !important;
   }
-}
+}/* deploy-trigger: 2026-02-14T00:00:00Z - forces CI redeploy */
